sw/source/writerfilter/dmapper/DomainMapper.cxx
@@ -4631,6 +4631,9 @@ void DomainMapper::lcl_utext(const sal_Unicode *const data_, size_t len)
                             && !m_pImpl->HasTopAnchoredObjects()
                             && !m_pImpl->IsParaWithInlineObject());
 
+            if (bRemove && !m_pImpl->GetRemoveThisPara())
+                m_pImpl->handleSectPrBeforeRemoval();
+
             const bool bNoNumbering = bRemove || (!m_pImpl->GetParaChanged() && m_pImpl->GetParaSectpr() && bSingleParagraph);
             PropertyMapPtr xContext = bNoNumbering ? m_pImpl->GetTopContextOfType(CONTEXT_PARAGRAPH) : PropertyMapPtr();
             if (xContext)
