sw/source/writerfilter/dmapper/DomainMapper_Impl.cxx
@@ -10182,6 +10182,29 @@ bool DomainMapper_Impl::handlePreviousParagraphBorderInBetween() const
     return true;
 }
 
+void DomainMapper_Impl::handleSectPrBeforeRemoval()
+{
+    PropertyMapPtr pSectPrContext = GetTopContextOfType(CONTEXT_PARAGRAPH);
+    if (!pSectPrContext)
+        return;
+
+    // transfer below-spacing to previous paragraph - needed to layout above-spacing after pageBreak
+    if (!m_StreamStateStack.top().xPreviousParagraph.is())
+        return;
+
+    uno::Any aBelowSpacing = GetAnyProperty(PROP_PARA_BOTTOM_MARGIN, pSectPrContext);
+    if (!aBelowSpacing.hasValue())
+        aBelowSpacing <<= sal_Int32(0);
+
+    std::optional<uno::Any> oPrevBelowSpacing;
+    OUString sProp(getPropertyName(PROP_PARA_BOTTOM_MARGIN));
+    if (m_StreamStateStack.top().xPreviousParagraph->getPropertySetInfo()->hasPropertyByName(sProp))
+        oPrevBelowSpacing = m_StreamStateStack.top().xPreviousParagraph->getPropertyValue(sProp);
+
+    if (!oPrevBelowSpacing.has_value() || aBelowSpacing != *oPrevBelowSpacing)
+        m_StreamStateStack.top().xPreviousParagraph->setPropertyValue(sProp, aBelowSpacing);
+}
+
 OUString DomainMapper_Impl::getFontNameForTheme(const Id id)
 {
     auto const& pHandler = getThemeHandler();
